# noval-writing-workbench

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  errors.py  logging_config.py  main.py
backend/app/models/: schemas.py
backend/app/prompts/: generation.py  knowledge.py  style_analysis.py
backend/app/routers/: analysis.py  corpus.py  drafts.py  generation.py  planning.py  projects.py  tasks.py  writing.py
backend/app/services/: book_planner.py  chapter_audit.py  chapter_planner.py  chapter_quality.py  chapter_reviewer.py  draft_store.py  file_loader.py  file_ops.py  generator.py  knowledge_base.py  local_importer.py  model_policy.py  model_response_parser.py  planning_store.py  preprocessor.py  project_context.py  project_paths.py  project_profile.py  project_runtime.py  project_store.py  style_analyzer.py  task_manager.py  writing_project_store.py
backend/tests/: test_acceptance.py  test_config.py  test_projects.py  test_reliability.py
docs/: CONFIG.md  DATA_AND_PRIVACY.md  DEVELOPMENT.md  INSTALLATION.md  USER_GUIDE.md  VERIFICATION.md
docs/productization/: 00-baseline-audit.md  01-product-definition.md  02-information-architecture.md  03-design-system.md  04-engineering-plan.md  05-test-report.md  data-model.md  migration-plan.md  page-specifications.md  performance-report.md  reliability-report.md  (+2 more)
examples/: sample_book_plan.json  sample_chapter.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+14 files in other folders)
