[project]
name = "noval-backend"
version = "0.1.0"
description = "龙族风格蒸馏与续写系统 - 后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.42.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "jieba>=0.42.1",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
